9aa48c1d0b30b2dd9ab299cbf71a8c185c6a3f86 Fix: Improve positioning of checkbox Dev: Better dark mode integration
Sync to source repo @9aa48c1d0b30b2dd9ab299cbf71a8c185c6a3f86

--- a/css/select.semanticui.css
+++ b/css/select.semanticui.css
@@ -7,7 +7,7 @@ table.dataTable > tbody > tr > th.select-checkbox:before,
 table.dataTable > tbody > tr > th.select-checkbox:after {
   display: block;
   position: absolute;
-  top: 1.2em;
+  top: 50%;
   left: 50%;
   width: 12px;
   height: 12px;
@@ -16,7 +16,7 @@ table.dataTable > tbody > tr > th.select-checkbox:after {
 table.dataTable > tbody > tr > td.select-checkbox:before,
 table.dataTable > tbody > tr > th.select-checkbox:before {
   content: " ";
-  margin-top: -3px;
+  margin-top: -6px;
   margin-left: -6px;
   border: 1px solid black;
   border-radius: 3px;
@@ -29,10 +29,9 @@ table.dataTable > tbody > tr.selected > td.select-checkbox:after,
 table.dataTable > tbody > tr.selected > th.select-checkbox:after {
   content: "✓";
   font-size: 20px;
-  margin-top: -19px;
+  margin-top: -12px;
   margin-left: -6px;
   text-align: center;
-  text-shadow: 1px 1px #B0BED9, -1px -1px #B0BED9, 1px -1px #B0BED9, -1px 1px #B0BED9;
 }
 table.dataTable.compact > tbody > tr > td.select-checkbox:before,
 table.dataTable.compact > tbody > tr > th.select-checkbox:before {
